--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "fabric-explorer",
+  "name": "nodejs1-study",
   "version": "0.0.1",
-  "description": "fabric-explorer",
+  "description": "nodejs-study",
   "main": "main.js",
   "keywords": [
-    "fabric-client sample app",
-    "v1.0 fabric nodesdk sample",
-    "alpha based nodesdk sample app"
+    "nodejs study"
   ],
   "engines": {
     "node": ">=6.9.5",
@@ -17,8 +15,6 @@
     "co": "^4.6.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
-    "fabric-ca-client": "^1.0.0",
-    "fabric-client": "^1.0.0",
     "fast-stats": "0.0.3",
     "log4js": "^0.6.38",
     "mysql": "^2.13.0",
@@ -26,7 +22,9 @@
     "socket.io": "^2.0.3",
     "stomp-broker-js": "^0.1.3",
     "stompjs": "^2.3.3",
-    "winston": "^2.2.0"
+    "winston": "^2.2.0",
+    "redis":"^2.8.0",
+    "bluebird":"^3.5.0"
   },
   "license": "Apache-2.0"
 }
