--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "npm": ">=3.10.10"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "co": "^4.6.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "fast-stats": "0.0.3",
+    "kubernetes-client": "^8.3.6",
     "log4js": "^0.6.38",
     "mysql": "^2.13.0",
     "prettyjson": "^1.2.1",
+    "redis": "^2.8.0",
     "socket.io": "^2.0.3",
     "stomp-broker-js": "^0.1.3",
     "stompjs": "^2.3.3",
-    "winston": "^2.2.0",
-    "redis":"^2.8.0",
-    "bluebird":"^3.5.0"
+    "winston": "^2.2.0"
   },
   "license": "Apache-2.0"
 }
